--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
 <h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Website - [Student Name]</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="#main">Main</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#practical-works">Practical Works</a></li>
+            <li><a href="#laboratory-classes">Laboratory Classes</a></li>
+        </ul>
+    </nav>
+
+    <!-- Page Title -->
+    <header>
+        <h1>Personal Website</h1>
+        <h2>[Student Name]</h2>
+    </header>
+
+    <!-- About Me Section -->
+    <section id="about-me">
+        <h2>About Me</h2>
+        <div>
+            <img src="student-photo.jpg" alt="[Student Name]">
+            <p>Contact: [Student Email]</p>
+            <p>[Short Biography]</p>
+        </div>
+    </section>
+
+    <!-- Practical Works Section -->
+    <section id="practical-works">
+        <h2>Practical Works</h2>
+        <ul>
+            <li>
+                <a href="practical-work1.html">Practical Work 1</a>
+                <p>[Brief Description]</p>
+            </li>
+            <li>
+                <a href="practical-work2.html">Practical Work 2</a>
+                <p>[Brief Description]</p>
+            </li>
+            <!-- Add more practical work items as needed -->
+        </ul>
+    </section>
+
+    <!-- Laboratory Classes Section -->
+    <section id="laboratory-classes">
+        <h2>Laboratory Classes</h2>
+        <ul>
+            <li>
+                <a href="lab-task1.html">Laboratory Task 1</a>
+                <p>[Brief Description]</p>
+            </li>
+            <li>
+                <a href="lab-task2.html">Laboratory Task 2</a>
+                <p>[Brief Description]</p>
+            </li>
+            <!-- Add more laboratory task items as needed -->
+        </ul>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div>
+            <p>Contact: [Student Email]</p>
+            <p>Social Media: [Social Media Links]</p>
+            <p>Years of Study: [Years]</p>
+            <p>GitHub: <a href="[GitHub Link]">[GitHub Repository]</a></p>
+        </div>
+    </footer>
+</body>
+</html>
