--- a/index.html
+++ b/index.html
@@ -56,6 +56,63 @@
         <ul>
             <li>
                 <a href="lab-task1.html">Laboratory Task 1</a>
+<body>
+    <!-- Link to this lab document -->
+    <p><a href="lab2.html">Lab 2</a></p>
+
+    <!-- Registration Form -->
+    <h1>Lab Registration</h1>
+    <form action="https://webhook.site/your-unique-id" method="POST">
+        <!-- Username -->
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+
+        <!-- Last Name -->
+        <div>
+            <label for="lastName">Last Name:</label>
+            <input type="text" id="lastName" name="lastName" required>
+        </div>
+
+        <!-- Email Address -->
+        <div>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+
+        <!-- Password -->
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+
+        <!-- Password Confirmation -->
+        <div>
+            <label for="confirmPassword">Confirm Password:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" required>
+        </div>
+
+        <!-- Optional Fields (Date of Birth and Gender) -->
+        <div>
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob">
+        </div>
+        <div>
+            <label for="gender">Gender:</label>
+            <select id="gender" name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
+
+        <!-- Submit Button -->
+        <div>
+            <input type="submit" value="Register">
+        </div>
+    </form>
+</body>
                 <p>[Brief Description]</p>
             </li>
             <li>
