--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<h1>Hello!</h1>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website - [Student Name]</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            border: 1px solid #ccc;
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -21,16 +35,15 @@
     <!-- Page Title -->
     <header>
         <h1>Personal Website</h1>
-        <h2>[Student Name]</h2>
+        <h2>[Denis Dalkevich]</h2>
     </header>
 
     <!-- About Me Section -->
     <section id="about-me">
         <h2>About Me</h2>
         <div>
-            <img src="student-photo.jpg" alt="[Student Name]">
-            <p>Contact: [Student Email]</p>
-            <p>[Short Biography]</p>
+            <img src="student-photo.jpg" alt="[Denis Dalkevich]">
+            <p>Username: [XxXben228XxX]</p>
         </div>
     </section>
 
@@ -39,14 +52,135 @@
         <h2>Practical Works</h2>
         <ul>
             <li>
-                <a href="practical-work1.html">Practical Work 1</a>
-                <p>[Brief Description]</p>
+                <a href="/kisyr/Practical_work_1.html">Practical Work 1</a>
+                <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Class</th>
+                <th>Location</th>
+                <th>Instructor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Monday -->
+            <tr>
+                <td rowspan="4">Mon 18.09.2023</td>
+                <td>3 pair<br>11:45-13:20</td>
+                <td>JJG-15 [Lecture]</td>
+                <td>audio 301</td>
+                <td>Vyshnivskyi O.V.</td>
+            </tr>
+            <tr>
+                <td>4 pair<br>13:30-15:05</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>5 pair<br>15:15-16:50</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>6 pair<br>17:00-18:35</td>
+                <td>VM [Lecture]</td>
+                <td>audio distance</td>
+                <td>Lykhodeeva H.V.</td>
+            </tr>
+
+            <!-- Tuesday -->
+            <tr>
+                <td rowspan="2">Tue 19.09.2023</td>
+                <td>3 pair<br>11:45-13:20</td>
+                <td>IM [Practical lesson]</td>
+                <td>audio 506</td>
+                <td>Gordiychuk N.V.</td>
+            </tr>
+            <tr>
+                <td>4 pair<br>13:30-15:05</td>
+                <td>IM [Practical lesson]</td>
+                <td>audio 320</td>
+                <td>Gordiychuk N.V.</td>
+            </tr>
+
+            <!-- Wednesday -->
+            <tr>
+                <td rowspan="3">Wed 20.09.2023</td>
+                <td>3 pair<br>11:45-13:20</td>
+                <td>WEB tech.-2016 [Laboratory lesson]</td>
+                <td>audio 206</td>
+                <td>Gordienko K.O.</td>
+            </tr>
+            <tr>
+                <td>4 pair<br>13:30-15:05</td>
+                <td>JJG-15 [Laboratory lesson]</td>
+                <td>audio 206</td>
+                <td>Vyshnivskyi O.V.</td>
+            </tr>
+            <tr>
+                <td>5 pair<br>15:15-16:50</td>
+                <td>VM [Laboratory lesson]</td>
+                <td>audio 310</td>
+                <td>S. V. Simchenko.</td>
+            </tr>
+
+            <!-- Thursday -->
+            <tr>
+                <td rowspan="3">Thu 21.09.2023</td>
+                <td>3 pair<br>11:45-13:20</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>4 pair<br>13:30-15:05</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>5 pair<br>15:15-16:50</td>
+                <td>TO [Laboratory lesson]</td>
+                <td>audio 206</td>
+                <td>Bazhan T.O.</td>
+            </tr>
+
+            <!-- Friday -->
+            <tr>
+                <td rowspan="4">Fri 09/22/2023</td>
+                <td>2 pairs<br>09:45-11:20</td>
+                <td>PPPI-15 [Practical lesson]</td>
+                <td>audio 325</td>
+                <td>Svatko V.V.</td>
+            </tr>
+            <tr>
+                <td>3 pair<br>11:45-13:20</td>
+                <td>VM [Practical lesson]</td>
+                <td>audio 521</td>
+                <td>Varshamov A.V.</td>
+            </tr>
+            <tr>
+                <td>4 pair<br>13:30-15:05</td>
+                <td>TO [Lecture]</td>
+                <td>audio 0-24-1</td>
+                <td>Zhebka V.V.</td>
+            </tr>
+            <tr>
+                <td>5 pair<br>15:15-16:50</td>
+                <td>PPPI-15 [Lecture]</td>
+                <td>audio 512</td>
+                <td>Svatko V.V.</td>
+            </tr>
+        </tbody>
+    </table>
             </li>
             <li>
                 <a href="practical-work2.html">Practical Work 2</a>
                 <p>[Brief Description]</p>
             </li>
-            <!-- Add more practical work items as needed -->
         </ul>
     </section>
 
@@ -55,108 +189,22 @@
         <h2>Laboratory Classes</h2>
         <ul>
             <li>
-                <a href="lab-task1.html">Laboratory Task 1</a>
-    <!-- Link to this lab document -->
-    <p><a href="lab2.html">Lab 2</a></p>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Registration</title>
-</head>
-<body>
-    <!-- Link to this lab document -->
-    <p><a href="lab2.html">Lab 2</a></p>
-
-    <!-- Registration Form -->
-    <h1>Lab Registration</h1>
-    <form action="https://webhook.site/your-unique-id" method="POST">
-        <!-- Username -->
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-
-        <!-- Last Name -->
-        <div>
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" name="lastName" required>
-        </div>
-
-        <!-- Email Address -->
-        <div>
-            <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-
-        <!-- Password -->
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-
-        <!-- Password Confirmation -->
-        <div>
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-        </div>
-
-        <!-- Optional Fields (Date of Birth and Gender) -->
-        <div>
-            <label for="dob">Date of Birth:</label>
-            <input type="date" id="dob" name="dob">
-        </div>
-        <div>
-            <label for="gender">Gender:</label>
-            <select id="gender" name="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
-
-        <!-- Submit Button -->
-        <div>
-            <input type="submit" value="Register">
-        </div>
-    </form>
-</body>
-        <!-- Optional Fields (Date of Birth and Gender) -->
-        <div>
-            <label for="dob">Date of Birth:</label>
-            <input type="date" id="dob" name="dob">
-        </div>
-        <div>
-            <label for="gender">Gender:</label>
-            <select id="gender" name="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
-
-        <!-- Submit Button -->
-        <div>
-            <input type="submit" value="Register">
-        </div>
-    </form>
+                <a href="/kisyr/lab_task_1.html">Laboratory Task 1</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a href="lab-task2.html">Laboratory Task 2</a>
+                <a href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
                 <p>[Brief Description]</p>
             </li>
-            <!-- Add more laboratory task items as needed -->
+            <li>
+                <a href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
+                <p>[Brief Description]</p>
+            </li>
+            <li>
+                <a href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
+                <p>[Brief Description]</p>
+            </li>
         </ul>
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <div>
-            <p>Contact: [Student Email]</p>
-            <p>Social Media: [Social Media Links]</p>
-            <p>Years of Study: [Years]</p>
-            <p>GitHub: <a href="[GitHub Link]">[GitHub Repository]</a></p>
-        </div>
-    </footer>
 </body>
 </html>
