--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <h2>Laboratory Classes</h2>
         <ul>
             <li>
-                <a href="/kisyr/lab_task_1.html">Laboratory Task 1</a>
+                <a href="/kiyb/task1.html">Laboratory Task 1</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
