--- a/task1.html
+++ b/task1.html
@@ -1,1 +1,23 @@
+<div class="videos1">
+    <div class="video1">
+        <iframe width="560" height="315" src="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <br>
+      <div class="caption" style="color:#ffffff">
+        Coming Soon!
+        </div>
+    </div>
+    <div class="video1">
+        <iframe width="560" height="315" src="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     <br>
+      <div class="caption" style="color:#ffffff">
+        Coming Soon!
+      </div>
+    </div>
+    <div class="video1">
+        <iframe width="560" height="315" src="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <br>
+      <div class="caption" style="color:#ffffff">
+        Coming Soon!
+      </div>
+    </div>
+</div> <!-- here -->
 
