--- a/task1.html
+++ b/task1.html
@@ -1,23 +1,110 @@
-<div class="videos1">
-    <div class="video1">
-        <iframe width="560" height="315" src="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <br>
-      <div class="caption" style="color:#ffffff">
-        Coming Soon!
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <!-- CSS File -->
+  <link rel="stylesheet" href="styles_v1.css" />
+  <title>Youtube Clone with HTML & CSS</title>
+</head>
+<body>
+  <header class="header">
+    <div class="logo left">
+      <i id="menu" class="material-icons">menu</i>
+      <img src="https://www.freecodecamp.org/news/content/images/2022/01/yt-logo.png" alt="YouTube Logo" />
     </div>
-    <div class="video1">
-        <iframe width="560" height="315" src="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     <br>
-      <div class="caption" style="color:#ffffff">
-        Coming Soon!
-      </div>
-    </div>
-    <div class="video1">
-        <iframe width="560" height="315" src="video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <br>
-      <div class="caption" style="color:#ffffff">
-        Coming Soon!
-      </div>
-    </div>
-</div> <!-- here -->
 
+    <div class="search center">
+      <form action="">
+        <input type="text" placeholder="Search" />
+        <button><i class="material-icons">search</i></button>
+      </form>
+      <i class="material-icons mic">mic</i>
+    </div>
+
+    <div class="icons right">
+      <i class="material-icons">videocam</i>
+      <i class="material-icons">apps</i>
+      <i class="material-icons">notifications</i>
+      <i class="material-icons display-this">account_circle</i>
+    </div>
+  </header>
+
+  <main>
+    <div class="side-bar">
+      <div class="nav">
+        <a class="nav-link active">
+          <i class="material-icons">home</i>
+          <span>Home</span>
+        </a>
+        <a class="nav-link">
+          <i class="material-icons">local_fire_department</i>
+          <span>Trending</span>
+        </a>
+        <a class="nav-link">
+          <i class="material-icons">subscriptions</i>
+          <span>Subscriptions</span>
+        </a>
+        <hr />
+        <a class="nav-link">
+          <i class="material-icons">library_add_check</i>
+          <span>Library</span>
+        </a>
+        <a class="nav-link">
+          <i class="material-icons">history</i>
+          <span>History</span>
+        </a>
+        <a class="nav-link">
+          <i class="material-icons">play_arrow</i>
+          <span>Your Videos</span>
+        </a>
+        <a class="nav-link">
+          <i class="material-icons">watch_later</i>
+          <span>Watch Later</span>
+        </a>
+        <a class="nav-link">
+          <i class="material-icons">thumb_up</i>
+          <span>Liked Videos</span>
+        </a>
+      </div>     
+    </div>
+      
+    <!-- Videos Section -->
+    <div class="videos1">
+      <!-- First video -->
+      <div class="video1">
+        <iframe width="560" height="315" src="video1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <div class="caption" style="color:#ffffff">
+          Coming Soon!
+        </div>
+      </div>
+
+      <!-- Second video -->
+      <div class="video1">
+        <iframe width="560" height="315" src="video2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <div class="caption" style="color:#ffffff">
+          Coming Soon!
+        </div>
+      </div>
+
+      <!-- Third video -->
+      <div class="video1">
+        <iframe width="560" height="315" src="video3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <div class="caption" style="color:#ffffff">
+          Coming Soon!
+        </div>
+      </div>
+    </div>
+    
+    <!-- Content Section -->
+    <div class="content"></div>
+  </main>
+  <!-- Main Body Ends -->
+</body>
+</html>
