--- a/task1.html
+++ b/task1.html
@@ -75,8 +75,8 @@
     <!-- Videos Section -->
     <div class="videos1">
       <!-- First video -->
-      <div class="https://www.youtube.com/watch?v=g2uIlhpwkdk&ab_channel=PixelRookie">
-        <iframe width="560" height="315" src="video1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="videos1">
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=g2uIlhpwkdk&ab_channel=PixelRookie" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br>
         <div class="caption" style="color:#ffffff">
           Coming Soon!
