--- a/task1.html
+++ b/task1.html
@@ -73,36 +73,106 @@
     </div>
       
     <!-- Videos Section -->
-    <div class="videos1">
-      <!-- First video -->
-      <div class="videos1">
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=g2uIlhpwkdk&ab_channel=PixelRookie" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br>
-        <div class="caption" style="color:#ffffff">
-          Coming Soon!
+    <div class="videos">
+  <!-- a video starts -->
+    <div class="video">
+       <div class="thumbnail">
+          <img src="https://img.youtube.com/vi/zUwB_imVjmg/maxresdefault.jpg" alt="" />
         </div>
-      </div>
 
-      <!-- Second video -->
-      <div class="video1">
-        <iframe width="560" height="315" src="video2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br>
-        <div class="caption" style="color:#ffffff">
-          Coming Soon!
-        </div>
-      </div>
+          <div class="details">
+             <div class="author">
+                <img src="https://yt3.ggpht.com/bpzY-S4DYlbTeOpY5hIA7qz_hcbMkgvLAugtwKBGTTImNnWAGudX0y53bo_fJZ0auypxrWkUiw=s88-c-k-c0x00ffffff-no-rj" alt="" />
+             </div>
+             <div class="title">
+                <h3>
+                    Introverts & Content Creation | Sumudu Siriwardana
+                 </h3>
+                 <a href="">
+                        Francesco Ciulla
+                  </a>
+                  <span> 2M Views • 3 Months Ago </span>
+             </div>
+           </div>
 
-      <!-- Third video -->
-      <div class="video1">
-        <iframe width="560" height="315" src="video3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br>
-        <div class="caption" style="color:#ffffff">
-          Coming Soon!
+         </div>
+   <!-- a video Ends -->
+ </div>
+<div class="videos">
+  <!-- a video starts -->
+    <div class="video">
+       <div class="thumbnail">
+          <img src="https://i.ytimg.com/vi/H96dhIHEY1s/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLB1Mn1JgLhxyYE8ONXq1o_mn2cKjQ" alt="" />
         </div>
-      </div>
-    </div>
-    
-    <!-- Content Section -->
+
+          <div class="details">
+             <div class="author">
+                <img src="https://yt3.googleusercontent.com/ytc/APkrFKYw9nsjLvBRZtnZrFMALhpV1HqsIfg7NS5ihJ8d=s176-c-k-c0x00ffffff-no-rj" alt="" />
+             </div>
+             <div class="title">
+                <h3>
+                    [ТРЕШ ОБЗОР] фильма ПАТХАН: СХВАТКА СО СМЕРТЬЮ (Индийский Форсаж)
+                 </h3>
+                 <a href="">
+                        Dorian Gray
+                  </a>
+                  <span> 399K Views • 5 Months Ago </span>
+             </div>
+           </div>
+
+         </div>
+   <!-- a video Ends -->
+ </div>
+    <div class="videos">
+  <!-- a video starts -->
+    <div class="video">
+       <div class="thumbnail">
+          <img src="https://i.ytimg.com/vi/Bcx55dz7uVA/maxresdefault.jpg" alt="" />
+        </div>
+
+          <div class="details">
+             <div class="author">
+                <img src="https://yt3.googleusercontent.com/ytc/APkrFKbvdUCaW-385WoPSa3d1UKPxVc7om4Umrv8ipFK=s176-c-k-c0x00ffffff-no-rj" alt="" />
+             </div>
+             <div class="title">
+                <h3>
+                    Using Guns to Kill 10,000 Zombies In the Hardest Map Mod- 100 Days Xonix's Mall
+                 </h3>
+                 <a href="">
+                        Ricksdetrix
+                  </a>
+                  <span> 10K Views • 9 Hours Ago </span>
+             </div>
+           </div>
+
+         </div>
+   <!-- a video Ends -->
+ </div>
+    <div class="videos">
+  <!-- a video starts -->
+    <div class="video">
+       <div class="thumbnail">
+          <img src="https://i.ytimg.com/vi/wJYyxc_5ZJY/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLD2XgxmpPGY7glx-B1JpjGc8SXtsA" alt="" />
+        </div>
+
+          <div class="details">
+             <div class="author">
+                <img src="https://yt3.googleusercontent.com/ytc/APkrFKau3OfREJnCZ5FvAsSyPFH0QiQ2cUHA-aQAHGFpDA=s176-c-k-c0x00ffffff-no-rj" alt="" />
+             </div>
+             <div class="title">
+                <h3>
+                    Лифт привез в другое измерение [ Треш обзор фильма Игра в Лифте ]
+                 </h3>
+                 <a href="">
+                        TerlKabot channel
+                  </a>
+                  <span> 505K Views • 2 Weaks Ago </span>
+             </div>
+           </div>
+
+         </div>
+   <!-- a video Ends -->
+ </div>
     <div class="content"></div>
   </main>
   <!-- Main Body Ends -->
