--- a/task1.html
+++ b/task1.html
@@ -113,6 +113,86 @@
                 </div>
             </div>
         </article>
+       </article>
+              <article class="video-container">
+            <a href="#" class="thumbnail">
+                <img class="thumbnail-image" src="https://i.ytimg.com/vi/H96dhIHEY1s/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLB1Mn1JgLhxyYE8ONXq1o_mn2cKjQ" />
+            </a>
+            <div class="video-bottom-section">
+                <a href="">
+                    <img class="channel-icon" src="https://yt3.googleusercontent.com/ytc/APkrFKYw9nsjLvBRZtnZrFMALhpV1HqsIfg7NS5ihJ8d=s176-c-k-c0x00ffffff-no-rj" />
+                </a>
+                <div class="video-details">
+                    <a href="#" class="video-tetle">[ТРЕШ ОБЗОР] фильма ПАТХАН: СХВАТКА СО СМЕРТЬЮ (Индийский Форсаж)</a>
+                    <a href="#" class="video-channel-name">Dorian Gray</a>
+                    <div class="video-metadata">
+                        <span>399K Views</span>
+                        •
+                        <span>1 Months Ago</span>
+                    </div>
+                </div>
+            </div>
+        </article>
+       </article>
+              <article class="video-container">
+            <a href="#" class="thumbnail">
+                <img class="thumbnail-image" src="https://i.ytimg.com/vi/H96dhIHEY1s/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLB1Mn1JgLhxyYE8ONXq1o_mn2cKjQ" />
+            </a>
+            <div class="video-bottom-section">
+                <a href="">
+                    <img class="channel-icon" src="https://yt3.googleusercontent.com/ytc/APkrFKYw9nsjLvBRZtnZrFMALhpV1HqsIfg7NS5ihJ8d=s176-c-k-c0x00ffffff-no-rj" />
+                </a>
+                <div class="video-details">
+                    <a href="#" class="video-tetle">[ТРЕШ ОБЗОР] фильма ПАТХАН: СХВАТКА СО СМЕРТЬЮ (Индийский Форсаж)</a>
+                    <a href="#" class="video-channel-name">Dorian Gray</a>
+                    <div class="video-metadata">
+                        <span>399K Views</span>
+                        •
+                        <span>1 Months Ago</span>
+                    </div>
+                </div>
+            </div>
+        </article>
+       </article>
+              <article class="video-container">
+            <a href="#" class="thumbnail">
+                <img class="thumbnail-image" src="https://i.ytimg.com/vi/H96dhIHEY1s/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLB1Mn1JgLhxyYE8ONXq1o_mn2cKjQ" />
+            </a>
+            <div class="video-bottom-section">
+                <a href="">
+                    <img class="channel-icon" src="https://yt3.googleusercontent.com/ytc/APkrFKYw9nsjLvBRZtnZrFMALhpV1HqsIfg7NS5ihJ8d=s176-c-k-c0x00ffffff-no-rj" />
+                </a>
+                <div class="video-details">
+                    <a href="#" class="video-tetle">[ТРЕШ ОБЗОР] фильма ПАТХАН: СХВАТКА СО СМЕРТЬЮ (Индийский Форсаж)</a>
+                    <a href="#" class="video-channel-name">Dorian Gray</a>
+                    <div class="video-metadata">
+                        <span>399K Views</span>
+                        •
+                        <span>1 Months Ago</span>
+                    </div>
+                </div>
+            </div>
+        </article>
+       </article>
+              <article class="video-container">
+            <a href="#" class="thumbnail">
+                <img class="thumbnail-image" src="https://i.ytimg.com/vi/H96dhIHEY1s/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLB1Mn1JgLhxyYE8ONXq1o_mn2cKjQ" />
+            </a>
+            <div class="video-bottom-section">
+                <a href="">
+                    <img class="channel-icon" src="https://yt3.googleusercontent.com/ytc/APkrFKYw9nsjLvBRZtnZrFMALhpV1HqsIfg7NS5ihJ8d=s176-c-k-c0x00ffffff-no-rj" />
+                </a>
+                <div class="video-details">
+                    <a href="#" class="video-tetle">[ТРЕШ ОБЗОР] фильма ПАТХАН: СХВАТКА СО СМЕРТЬЮ (Индийский Форсаж)</a>
+                    <a href="#" class="video-channel-name">Dorian Gray</a>
+                    <div class="video-metadata">
+                        <span>399K Views</span>
+                        •
+                        <span>1 Months Ago</span>
+                    </div>
+                </div>
+            </div>
+        </article>
     </section>
 </div>
 
