--- a/task1.html
+++ b/task1.html
@@ -73,7 +73,7 @@
         </div>
       
     <!-- Videos Section -->
-<div ckass="videos">
+<div class="videos">
     <section class="video-section">
         <article class="video-container">
             <a href="#" class="thumbnail">
