--- a/task3.html
+++ b/task3.html
@@ -71,7 +71,7 @@
                 </a>
             </div>     
         </div>
-        <div ckass="content">
+        <div class="content">
             <div class="videos">
                 <div class="video">
                     <div class="thumbnail">
