--- a/task_v1.html
+++ b/task_v1.html
@@ -14,23 +14,20 @@
       padding: 0;
     }
     .weekly-plan {
-      border-collapse: collapse; /* Collapse table borders */
-      height: 100vh; /* Stretch the table's height to 100% of the viewport */
+      border-collapse: collapse;
+      height: 100vh;
     }
     .weekly-plan td {
-      border: 2px solid black; /* Add borders to table cells */
-      vertical-align: middle; /* Align content vertically in the center of the cell */
-      text-align: center; /* Align content horizontally in the center of the cell */
+      border: 2px solid black;
+      vertical-align: middle;
+      text-align: center;
     }
     .text-input {
-      width: 99%; /* Set the width of text inputs to fit inside the cell */
-      height: 95%; /* Set the height of text inputs to fit inside the cell */
-      margin: 0; /* Remove margin */
-      padding: 5px; /* Add a small amount of padding for better appearance */
-      box-sizing: border-box; /* Include padding in the width/height calculations */
-    }
-    .middle-block .text-input {
-      height: 90%; /* Reduce the height to make room for the dotted lines */
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 5px;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -45,17 +42,14 @@
           <td class="section-block">
             <div class="top-block">
               <h2 class="section-title">Top 3 Goals</h2>
-              <div class="dotted-lines"></div>
               <textarea class="text-input" rows="3" type="string"></textarea>
             </div>
             <div class="middle-block">
               <h2 class="section-title">Everything Else</h2>
-              <div class="dotted-lines"></div>
               <textarea class="text-input" rows="11" type="string"></textarea>
             </div>
             <div class="bottom-block">
               <h2 class="section-title">Next Week</h2>
-              <div class="dotted-lines"></div>
               <textarea class="text-input" rows="3" type="string"></textarea>
             </div>
           </td>
@@ -67,41 +61,29 @@
         <div class="days-row" style="height: 50%;">
           <div class="day">
             Monday
-            <div class="day-textarea">
-              <textarea class="text-input" rows="11" type="string"></textarea>
-            </div>
+            <textarea class="text-input" rows="11" type="string"></textarea>
           </div>
           <div class="day">
             Tuesday
-            <div class="day-textarea">
-              <textarea class="text-input" rows="11" type="string"></textarea>
-            </div>
+            <textarea class="text-input" rows="11" type="string"></textarea>
           </div>
           <div class="day">
             Wednesday
-            <div class="day-textarea">
-              <textarea class="text-input" rows="11" type="string"></textarea>
-            </div>
+            <textarea class="text-input" rows="11" type="string"></textarea>
           </div>
         </div>
         <div class="days-row" style="height: 50%;">
           <div class="day">
             Thursday
-            <div class="day-textarea">
-              <textarea class="text-input" rows="11" type="string"></textarea>
-            </div>
+            <textarea class="text-input" rows="11" type="string"></textarea>
           </div>
-          <div class "day">
+          <div class="day">
             Friday
-            <div class="day-textarea">
-              <textarea class="text-input" rows="11" type="string"></textarea>
-            </div>
+            <textarea class="text-input" rows="11" type="string"></textarea>
           </div>
           <div class="day">
             Saturday / Sunday
-            <div class="day-textarea">
-              <textarea class="text-input" rows="11" type="string"></textarea>
-            </div>
+            <textarea class="text-input" rows="11" type="string"></textarea>
           </div>
         </div>
       </div>
