--- a/task_v1.html
+++ b/task_v1.html
@@ -15,6 +15,7 @@ User
       padding: 0;
     }
     .weekly-plan {
+      border: 1px solid black; /* Set border to a thin line */
       border-collapse: collapse;
       height: 100vh;
     }
