--- a/task_v1.html
+++ b/task_v1.html
@@ -20,6 +20,7 @@
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 3px;
       width: 100%; /* Make the article element 100% width */
+      height: 100%; /* Make the article element 100% height */
     }
 
     section {
