--- a/task_v1.html
+++ b/task_v1.html
@@ -16,7 +16,7 @@
 
     article {
       display: grid;
-      grid-template-rows: 100px 100px;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 3px;
       width: 100%; /* Make the article element 100% width */
