--- a/task_v1.html
+++ b/task_v1.html
@@ -19,8 +19,7 @@
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 3px;
-      width: 100%; /* Make the article element 100% width */
-      height: 100%; /* Make the article element 100% height */
+      width: 100%;
     }
 
     section {
@@ -28,7 +27,7 @@
       justify-content: center;
       align-items: center;
       border: 2px solid black;
-      font-size: 1.5em; /* Adjusted font size */
+      font-size: 1.5em;
     }
   </style>
 </head>
