--- a/task_v1.html
+++ b/task_v1.html
@@ -78,12 +78,12 @@
       <div class="parent">
         <div class="div1"> </div>
         <div class="div2"> </div>
-        <div class="div3"> </div>
-        <div class="div4"> </div>
-        <div class="div5"> </div>
-        <div class="div6"> </div>
-        <div class="div7"> </div>
-        <div class="div8"> </div>
+        <div class="div3">Monday</div>
+        <div class="div4">Tuesday</div>
+        <div class="div5">Wednesday</div>
+        <div class="div6">Thursday</div>
+        <div class="div7">Friday</div>
+        <div class="div8">Saturday / Sunday</div>
         <div class="div9"> </div>
       </div>
     </div>
