--- a/task_v1.html
+++ b/task_v1.html
@@ -20,16 +20,19 @@
       grid-template-rows: repeat(4, 1fr);
       grid-column-gap: 0px;
       grid-row-gap: 0px;
+      height: 100%; /* Stretch to the height of the page */
     }
 
     .div1 { grid-area: 1 / 1 / 2 / 5; }
     .div2 { grid-area: 2 / 1 / 5 / 2; }
-    .div3 { grid-area: 2 / 2 / 3 / 3; }
-    .div4 { grid-area: 2 / 3 / 3 / 4; }
-    .div5 { grid-area: 2 / 4 / 3 / 5; }
-    .div6 { grid-area: 3 / 2 / 4 / 3; }
-    .div7 { grid-area: 3 / 3 / 4 / 4; }
-    .div8 { grid-area: 3 / 4 / 4 / 5; }
+    .div3, .div4, .div5, .div6, .div7, .div8 { 
+      grid-area: 2 / 2 / 5 / 5; /* Stretch to the width of the page */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid black;
+      font-size: 1.5em;
+    }
     .div9 { grid-area: 4 / 1 / 5 / 5; background-color: #ccc; }
 
     article {
